--- a/code_cuda/index.html
+++ b/code_cuda/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>cắt cuda</title>
-	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<title> cuda</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
 	<style>
@@ -16,18 +16,18 @@
 		<header>
 			<div class="container">
 				<div class="row logo_menu">
-					<div class="col-xl-6 logo"><h1>
+					<div class="col-xl-3 logo"><h1>
 						<a href="#">
 							<img src="imgs/cuda.png" alt="cuda">
 						</a></h1>
 					</div>
-					<div class="col-xl-6">
-						<ul class="row row_right">
-							<li class="col-xl-2 btn menu_item"><a class="link_menu" href="#">HOME</a></li>
-							<li class="col-xl-2 btn menu_item"><a class="link_menu" href="#">ABOUT</a></li>
-							<li class="col-xl-2 btn menu_item"><a class="link_menu" href="#">WORK</a></li>
-							<li class="col-xl-2 btn menu_item"><a class="link_menu" href="#">BLOG</a></li>
-							<li class="col-xl-2 btn menu_item"><a class="link_menu" href="#">CONTACT</a></li>
+					<div class="col-xl-9">
+						<ul class=" row_right">
+							<li class="btn menu_item"><a class="link_menu" href="#">HOME</a></li>
+							<li class="btn menu_item"><a class="link_menu" href="#">ABOUT</a></li>
+							<li class=" btn menu_item"><a class="link_menu" href="#">WORK</a></li>
+							<li class=" btn menu_item"><a class="link_menu" href="#">BLOG</a></li>
+							<li class=" btn menu_item"><a class="link_menu" href="#">CONTACT</a></li>
 						</ul>
 					</div>
 				</div>
@@ -377,8 +377,9 @@
 				</div>
 		</div>			
 	</div>
-	<script type="text/javascript" src ="../js/jquery.min.js"></script>
-	<script type="text/javascript" src="../js/popper.min.js"></script>
-	<script type="text/javascript" src ="../js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
