--- a/happy teachers day/index.html
+++ b/happy teachers day/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
        
-        <link rel="stylesheet" href="happy.css">
+        <link rel="stylesheet" href="style.css">
         <title>happy teachers day</title>
     </head>
     <body>
